# time-lite

./: .gitignore  README.md  time-lite.cabal
Data/Time/: Lite.hs
Data/Time/Lite/: Nano.hs
benchmarks/: gettimeofday_bench.hs
