name:                    time-lite
version:                 0.0.1.0
license:                 Apache-2.0
license-file:            LICENSE
author:                  Mihaly Barasz
maintainer:              klao@nilcons.com
homepage:                https://github.com/nilcons/time-lite
category:                Data
build-type:              Simple
stability:               experimental
cabal-version:           >= 1.10
synopsis:                Experimental fast replacement for the time library

extra-source-files:
  README.md

Source-Repository head
  Type: git
  Location: https://github.com/nilcons/time-lite.git

library
  exposed-modules:
    Data.Time.Lite
    Data.Time.Lite.Nano

  -- other-modules:
  -- other-extensions:
  -- hs-source-dirs:
  default-language:      Haskell2010
  ghc-options:           -Wall
  build-depends:
    base                 >= 4       &&  < 5,
    binary               >= 0.5     &&  < 0.8,
    deepseq              >= 1.1     &&  < 1.4,
    lens                 >= 4.0     &&  < 4.3,
    time                 >= 1.3     &&  < 1.5,
    vector               >= 0.10    &&  < 0.11,
    vector-space         >= 0.8     &&  < 0.9

benchmark gettimeofday_bench
  Type: exitcode-stdio-1.0
  main-is: gettimeofday_bench.hs
  hs-source-dirs: benchmarks
  default-language: Haskell2010
  ghc-options: -Wall -O2
  build-depends:
    time-lite,
    base,
    criterion,
    lens,
    time
